2004-05-11  Jeffrey Stedfast  <fejj@novell.com>

	* e-msg-composer.c (build_message): Use CAMEL_EXCEPTION_SYSTEM
	instead of '1', also don't use camel_exception_setv() if we aren't
	using the printf-style arguments. Just use camel_exception_set() -
	safer anyway, since then we don't have to worry about translated
	strings containing printf-style formatters that could break stuff.

2004-05-08  Enver ALTIN <enver.altin@frontsite.com.tr>

	* e-msg-composer.c: Fixing parts of #53466.

2004-05-03  Not Zed  <NotZed@Ximian.com>

	* e-msg-composer.c: header cleanups.

2004-04-28  Not Zed  <NotZed@Ximian.com>

	** Changed error messages to EError.

2004-04-27  Not Zed  <NotZed@Ximian.com>

	* e-msg-composer-attachment-bar.c (update): duh, pass the string
	not the content type to the warning message.  And derrr, print it
	for the actual error case, not the ok case.  Fixes #57680.

2004-04-26  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer.c (autosave_load_draft): Only unlink the original
	autosave draft file if we are successful in saving a new copy,
	otherwise don't unlink the file. Fixes bug #57540.

2004-04-23  Not Zed  <NotZed@Ximian.com>

	* e-msg-composer-attachment-bar.c (update): fallback to stock
	unknown if we can't ifnd the icon.  #56717.

2004-04-19  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer.c (create_composer): Use the E_ICON_SIZE enums
	rather than specifying an absolute pixel size.

2004-04-19  Michael Terry  <mike@mterry.name>

	* e-msg-composer.c: Update the composer to use the icon theme via
	the EIconFactory object in e-util

2004-04-15  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer-attachment-bar.c (attach_to_multipart): Same idea
	here as with build_mesage(), don't convert th gconf charset
	setting to the iconv name before setting it on the mime part.

	* e-msg-composer.c (best_charset): Now returns a malloc'd string
	bufefr containing the charset that has NOT been converted to the