@@ -1,0 +1,55 @@
+<?xml version="1.0"?>
+<error-list domain="mail-composer">
+
+ <error id="no-attach" type="error" modal="true">
+  <primary>You cannot attach the file `${0}' to this message.</primary>
+  <secondary>${1}</secondary>
+ </error>
+
+ <error id="attach-notfile" type="warning">
+  <primary>The file `${0}' is not a regular file and cannot be sent in a message.</primary>
+ </error>
+
+ <error id="attach-directory">
+  <primary>Directories can not be attached to Messages.</primary>
+  <secondary>To attach the contents of this directory, either attach the files in this directory individually, or create an archive of the directory and attach it.</secondary>
+ </error>
+
+ <error id="recover-autosave" type="question">
+  <title>Unfinished messages found</title>
+  <primary>Do you want to recover unfinished messages?</primary>
+  <secondary>Evolution quit unexpectedly while you were composing a new message. Recovering the message will allow you to continue where you left off.</secondary>
+  <button label="Don't Recover" response="GTK_RESPONSE_CANCEL"/>
+  <button label="Recover" response="GTK_RESPONSE_YES"/>
+ </error>
+
+ <error id="no-autosave" type="error">
+  <primary>Could not save to autosave file &quot;{0}&quot;.</primary>
+  <secondary>Error saving to autosave because &quot;{1}&quot;.</secondary>
+ </error>
+
+ <error id="exit-unsaved" modal="true" type="warning">
+  <title>Warning: Modified Message</title>
+  <primary>Are you sure you want to discard the message, titled '{0}', you are composing?</primary>
+  <secondary>Closing this composer window will discard the message permanently, unless you choose to save the message in your Drafts folder. This will allow you to continue the message at a later date.</secondary>
+  <button label="Discard Changes" response="GTK_RESPONSE_NO"/>
+  <button stock="gtk-cancel" response="GTK_RESPONSE_CANCEL"/>
+  <button label="Save Message" response="GTK_RESPONSE_YES"/>
+ </error>
+
+ <error id="no-build-message" type="error" modal="true">
+  <primary>Could not create message.</primary>
+  <secondary>Because &quot;${0}&quot;, you may need to select different mail options.</secondary>
+ </error>
+
+ <error id="no-sig-file" type="warning" modal="true">
+  <primary>Could not read signature file &quot;{0}&quot;.</primary>
+  <secondary>Because &quot;${1}&quot;.</secondary>
+ </error>
+
+ <error id="all-accounts-deleted" type="warning" modal="true">
+  <primary>All accounts have been removed.</primary>
+  <secondary>You need to configure an account before you can compose mail.</secondary>
+ </error>
+
+</error-list>
