@@ -1,0 +1,42 @@
+/* mail-composer:no-attach primary */
+char *s = N_("You cannot attach the file `${0}' to this message.");
+/* mail-composer:no-attach secondary */
+char *s = N_("${1}");
+/* mail-composer:attach-notfile primary */
+char *s = N_("The file `${0}' is not a regular file and cannot be sent in a message.");
+/* mail-composer:attach-directory primary */
+char *s = N_("Directories can not be attached to Messages.");
+/* mail-composer:attach-directory secondary */
+char *s = N_("To attach the contents of this directory, either attach the files in this directory individually, or create an archive of the directory and attach it.");
+/* mail-composer:recover-autosave title */
+char *s = N_("Unfinished messages found");
+/* mail-composer:recover-autosave primary */
+char *s = N_("Do you want to recover unfinished messages?");
+/* mail-composer:recover-autosave secondary */
+char *s = N_("Evolution quit unexpectedly while you were composing a new message. Recovering the message will allow you to continue where you left off.");
+char *s = N_("Don't Recover");
+char *s = N_("Recover");
+/* mail-composer:no-autosave primary */
+char *s = N_("Could not save to autosave file \"{0}\".");
+/* mail-composer:no-autosave secondary */
+char *s = N_("Error saving to autosave because \"{1}\".");
+/* mail-composer:exit-unsaved title */
+char *s = N_("Warning: Modified Message");
+/* mail-composer:exit-unsaved primary */
+char *s = N_("Are you sure you want to discard the message, titled '{0}', you are composing?");
+/* mail-composer:exit-unsaved secondary */
+char *s = N_("Closing this composer window will discard the message permanently, unless you choose to save the message in your Drafts folder. This will allow you to continue the message at a later date.");
+char *s = N_("Discard Changes");
+char *s = N_("Save Message");
+/* mail-composer:no-build-message primary */
+char *s = N_("Could not create message.");
+/* mail-composer:no-build-message secondary */
+char *s = N_("Because \"${0}\", you may need to select different mail options.");
+/* mail-composer:no-sig-file primary */
+char *s = N_("Could not read signature file \"{0}\".");
+/* mail-composer:no-sig-file secondary */
+char *s = N_("Because \"${1}\".");
+/* mail-composer:all-accounts-deleted primary */
+char *s = N_("All accounts have been removed.");
+/* mail-composer:all-accounts-deleted secondary */
+char *s = N_("You need to configure an account before you can compose mail.");
