@@ -1,3 +1,11 @@
+2004-05-12  Not Zed  <NotZed@Ximian.com>
+
+	* mail-composer-errors.xml.h: add for translators.
+
+	* mail-composer-errors.xml: renamed from xml.in file.
+
+	* Makefile.am: Fix for i18n build stuff.
+
 2004-05-11  Jeffrey Stedfast  <fejj@novell.com>
 
 	* e-msg-composer.c (build_message): Use CAMEL_EXCEPTION_SYSTEM
